--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,14 @@
-
 html, body {
   margin: 0;
   padding: 0;
-  background: #0a0a0a;
+  width: 100%;
+  height: 100%;
+  background: black;
   overflow: hidden;
 }
 
 canvas {
   display: block;
+  width: 100vw;
+  height: 100vh;
 }
